--- a/style.css
+++ b/style.css
@@ -57,17 +57,47 @@ img {
   text-align: center;
 }
 
-.plan {
-  background-color: rgba(248, 249, 254);
-  box-sizing: border-box;
-  display: inline-block;
-  flex-direction: row;
-  align-content: center;
+.plan-container {
+  display: grid;
+  grid-template-columns: 1fr 1.2fr 0.8fr;
+  grid-template-rows: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: column;
   justify-content: center;
-  margin: 25px;
-  border-radius: 20px;
-  line-height: 0;
-  height: 80px;
+  align-content: center;
+  grid-template-areas:
+    "music-i plan-txt plan-link";
+  height: 110px;
+}
+
+.music-i {
+  justify-self: center;
+  align-self: center;
+  grid-area: music-i;
+}
+
+.plan-txt {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    "t1"
+    "t2";
+  justify-self: start;
+  align-self: center;
+  text-align: center;
+  grid-area: plan-txt;
+}
+
+
+.plan-link {
+  display: inline;
+  align-self: center;
+  text-align: center;
+  grid-area: plan-link;
+  color: rebeccapurple;
+  text-decoration: underline;
 }
 
 
