--- a/style.css
+++ b/style.css
@@ -4,11 +4,9 @@
 body {
   background-color: hsl(225, 100%, 94%);
   font-family: 'Red Hat Display', sans-serif;
-
   margin-top: 20%;
   margin-bottom: 20%;
   padding: 0;
-  max-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -119,6 +117,10 @@ img {
   color: rgb(126,131,150);
 }
 
+#h5-color {
+  color: rgb(126,131,150);
+  font-weight: 700;
+}
 /*ATTRIBUTION*/
 .attribution {
   margin-top: 30px;
