--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 
+@media all and (min-width: 1439.99px) {
+  body {
+        max-height: 500px;
 
+  }
+}
 body {
   background-color: hsl(225, 100%, 94%);
   font-family: 'Red Hat Display', sans-serif;
